replaced uitextfield with uiview for the comments toolbar

--- a/Brief/BriefItemDetailViewController.xib
+++ b/Brief/BriefItemDetailViewController.xib
@@ -6,11 +6,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BriefItemDetailViewController" customModule="Brief" customModuleProvider="target">
             <connections>
-                <outlet property="inputAccessoryTextfield" destination="PZp-8z-rHu" id="jyS-6W-Kb4"/>
+                <outlet property="barButtonItem" destination="99m-aG-Prt" id="K2I-jb-d3Q"/>
+                <outlet property="inputAccessoryBarButtonItem" destination="6aV-zU-fOb" id="xVt-UU-6rG"/>
                 <outlet property="inputAccessoryToolbar" destination="HiU-Yv-T3e" id="KXM-o6-Ixd"/>
                 <outlet property="itemLabel" destination="dIn-sF-PF7" id="6Dp-fu-GUC"/>
                 <outlet property="table" destination="1Qc-PS-f05" id="wha-X6-b6q"/>
-                <outlet property="textField" destination="NvE-py-qBx" id="TpI-09-zxF"/>
                 <outlet property="toolbar" destination="3LF-wP-4ko" id="3p5-z3-LdF"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -28,7 +28,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1Qc-PS-f05">
-                    <rect key="frame" x="0.0" y="145" width="320" height="130"/>
+                    <rect key="frame" x="0.0" y="145" width="320" height="76"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
                 <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" barStyle="black" translatesAutoresizingMaskIntoConstraints="NO" id="3LF-wP-4ko">
@@ -37,17 +37,7 @@
                         <barButtonItem systemItem="camera" id="80V-u5-uUR">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </barButtonItem>
-                        <barButtonItem style="plain" id="wkV-ll-DN7">
-                            <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="NvE-py-qBx">
-                                <rect key="frame" x="35" y="7" width="215" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="-1" id="hlM-xv-8YA"/>
-                                </connections>
-                            </textField>
-                        </barButtonItem>
+                        <barButtonItem title="Item" id="99m-aG-Prt"/>
                         <barButtonItem title="Post" id="XXr-3M-aao">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </barButtonItem>
@@ -60,17 +50,7 @@
                         <barButtonItem systemItem="camera" id="CTf-ms-i2s">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </barButtonItem>
-                        <barButtonItem style="plain" id="TpZ-uS-pBm">
-                            <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="PZp-8z-rHu">
-                                <rect key="frame" x="35" y="7" width="215" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="-1" id="ZL8-sG-QM5"/>
-                                </connections>
-                            </textField>
-                        </barButtonItem>
+                        <barButtonItem title="Item" id="6aV-zU-fOb"/>
                         <barButtonItem title="Post" id="fZB-Fv-6Qu">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
