Got swipe working for cells

--- a/Brief/BriefItemCommentTableViewCell.xib
+++ b/Brief/BriefItemCommentTableViewCell.xib
@@ -55,6 +55,7 @@
                     <constraint firstItem="Mfs-nM-Tys" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="blC-gK-GVj"/>
                     <constraint firstItem="Mfs-nM-Tys" firstAttribute="leading" secondItem="S6Y-N9-vMe" secondAttribute="trailing" constant="8" id="f29-Us-Fy2"/>
                     <constraint firstItem="Mfs-nM-Tys" firstAttribute="leading" secondItem="S6Y-N9-vMe" secondAttribute="trailing" constant="8" id="f60-uC-b5S"/>
+                    <constraint firstItem="Mfs-nM-Tys" firstAttribute="top" secondItem="ZHr-7W-fo6" secondAttribute="bottom" constant="2" id="k7d-vU-KgY"/>
                     <constraint firstItem="Mfs-nM-Tys" firstAttribute="top" secondItem="q1k-WB-ccp" secondAttribute="bottom" constant="2" id="pUN-Mo-vqL"/>
                     <constraint firstItem="ZHr-7W-fo6" firstAttribute="leading" secondItem="S6Y-N9-vMe" secondAttribute="trailing" constant="8" id="vR3-VY-ycs"/>
                 </constraints>
