--- a/Brief/BriefItemCommentTableViewCell.xib
+++ b/Brief/BriefItemCommentTableViewCell.xib
@@ -20,20 +20,20 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="comment_icon" translatesAutoresizingMaskIntoConstraints="NO" id="S6Y-N9-vMe" userLabel="author image">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="S6Y-N9-vMe" userLabel="author image">
                         <rect key="frame" x="8" y="8" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="40" id="nfj-uW-IrX"/>
                             <constraint firstAttribute="height" constant="40" id="qX1-SA-ZnV"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="256" translatesAutoresizingMaskIntoConstraints="NO" id="Mfs-nM-Tys" userLabel="content">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Comment content goes here..." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="256" translatesAutoresizingMaskIntoConstraints="NO" id="Mfs-nM-Tys" userLabel="content">
                         <rect key="frame" x="56" y="24" width="256" height="65"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="1d" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q1k-WB-ccp" userLabel="timestamp">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="🕗 1d" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q1k-WB-ccp" userLabel="timestamp">
                         <rect key="frame" x="261" y="8" width="51" height="14"/>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -47,7 +47,9 @@
                     <constraint firstItem="q1k-WB-ccp" firstAttribute="leading" secondItem="ZHr-7W-fo6" secondAttribute="trailing" constant="8" id="5kR-dn-idu"/>
                     <constraint firstItem="Mfs-nM-Tys" firstAttribute="top" secondItem="ZHr-7W-fo6" secondAttribute="bottom" constant="2" id="6ur-jp-f1l"/>
                     <constraint firstItem="q1k-WB-ccp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="74a-Ap-0as"/>
+                    <constraint firstItem="S6Y-N9-vMe" firstAttribute="top" secondItem="ZHr-7W-fo6" secondAttribute="top" id="CwL-i3-xVB"/>
                     <constraint firstItem="S6Y-N9-vMe" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="EsC-lM-guZ"/>
+                    <constraint firstItem="S6Y-N9-vMe" firstAttribute="top" secondItem="q1k-WB-ccp" secondAttribute="top" id="HxS-pg-C9B"/>
                     <constraint firstItem="ZHr-7W-fo6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="L6q-No-gia"/>
                     <constraint firstItem="Mfs-nM-Tys" firstAttribute="top" secondItem="q1k-WB-ccp" secondAttribute="bottom" constant="2" id="Qh7-D9-ezd"/>
                     <constraint firstItem="S6Y-N9-vMe" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Tnn-WG-Tda"/>
@@ -70,6 +72,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="comment_icon" width="13" height="13"/>
+        <image name="avatar" width="210" height="210"/>
     </resources>
 </document>
